<resources>
    <string name="app_name">AshStrolling</string>
    <string name="nav_stroll">Stroll</string>
    <string name="nav_pokedex">Pokédex</string>
    <string name="nav_about">About</string>
    <string name="path">Path</string>
    <string name="northAcron">N</string>
    <string name="southAcron">S</string>
    <string name="eastAcron">E</string>
    <string name="westAcron">W</string>
    <string name="ash_stroll_action">Ash Stroll!</string>
    <string name="author">Author: </string>
    <string name="author_url" translatable="false">http://www.linkedin.com/in/csotelo</string>
    <string name="me" translatable="false"><a href='http://www.linkedin.com/in/csotelo'>Carlos Sotelo</a></string>
    <string name="under_construction">Under Construction!</string>
    <string name="sample_explanation">This is a sample project that aims to solve the proposed problem: </string>
    <string name="problemDescription">O Ash está a apanhar pokémons num mundo que consiste numa grelha bidimensional infinita de casas. Em cada casa há exatamente um pokémon.\n\nO Ash começa por apanhar o pokémon que está na casa onde começa. A seguir, move-se para a casa imediatamente a norte, sul, este ou oeste de onde se encontra e apanha o pokémon que aí se encontrar, e assim sucessivamente. Atenção: se ele passar numa casa onde já passou (e, portanto, onde já apanhou um pokémon), já lá não está um pokémon para ele apanhar!\n\n O que queremos saber é: começando com um mundo cheio de pokémons (um em cada casa!), quantos pokémons o Ash apanha para uma dada sequência de movimentos?\n\n\n<B>Input and Output samples:</B>\nE -> 2\nNESO -> 4 \nNSNSNSNSNSNS -> 2</string>
    <string name="path_efficiency">Path efficiency:</string>
    <string name="pokemon_id">#%1$s</string>
</resources>
